--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "mj-ui",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/mj-ui.umd.min.js",
+  "author": {
+    "name": "mj"
+  },
   "scripts": {
     "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
