--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mj-ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "main": "dist/mj-ui.umd.min.js",
   "author": {
     "name": "mj"
